--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@500&family=Raleway:wght@400;500&display=swap');
 
 @tailwind base;
 @tailwind components;
